ingress/doggy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doggy-ingress
  namespace: default
  annotations:
    # Apply rewrite-target only to /api/* paths
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        # For /api/ paths, we want to strip the /api prefix
        - path: /api/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: registry-service
              port:
                number: 8080
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: doggy-webapp
              port:
                number: 80
